2007-02-17 20:34:21  Sean Middleditch <elanthis@awesomeplay.com>

  * Renamed the parse system to the macro system, which is far
    less confusing.
  * Clean up of XML source file names and generated file names.

2007-02-15 07:41:56  Sean Middleditch <elanthis@awesomeplay.com>

  * Remove request and command events.
  * Modify event structure to have only a single defined element,
    the recipient Entity, and then auxillary data on top of that.
  * All events are placed on a queue; no event will be immediately
    processed.
  * Broadcast events are broadcast immediately, but none of the
    resulting events are processed immediately.
  * Added missing NPC efactory.
  * Moved generated headers sources into a separate destination
    hierarchy, in include/generated/ and src/generated/.
  * Added new header with toValue() function which can convert
    any wrapped type to a Value so that they may be easily sent
    to callback functions.

2007-02-12 06:13:12  Sean Middleditch <elanthis@awesomeplay.com>

  * Removed IDMAP use for Event IDs.  They are now hard-coded
    from the events-list.xml source file.  No more registering
    them at run-time.
  * Updated the script binding generator so that we can use EventID
    objects within scripts instead of string names or integers.
  * The new EventID type in Scriptix is not yet used, as the API
    headers don't allow for passing EventIDs into Scripts.

2007-02-11 08:01:53  Sean Middleditch <elanthis@awesomeplay.com>

  * Remove creature alignment.  Complexity we don't need right now.
  * Remove experience pools, replace with a single experience total.
    I still have no good way to decide when to award different
    types of XP.  Or even when to award regular XP, for that matter.

2007-02-11 07:11:33  Sean Middleditch <elanthis@awesomeplay.com>

  * New character login was crashing because the character had no
    prior room, and the enter_room function incorrectly passed in
    events with no room.
