@@ -1,0 +1,32 @@
+<?xml version="1.0"?>
+<xsl:stylesheet version="1.1" xmlns:xsl="http://www.w3.org/1999/XSL/Transform">
+  <xsl:output method="text"/>
+  <xsl:template match="/skills">
+
+<!-- header -->
+<xsl:text><![CDATA[
+// Generated by skills-header.xsl
+// DO NOT EDIT
+
+#include "mud/skill.h"
+
+String SkillID::names[] = {
+  S("None"),
+]]></xsl:text>
+<xsl:for-each select="skill">
+  <xsl:text>S("</xsl:text><xsl:value-of select="@name" /><xsl:text>"),</xsl:text>
+</xsl:for-each>
+<xsl:text><![CDATA[
+};
+
+SkillID
+SkillID::lookup (String name) {
+  for (size_t i = 0; i < COUNT; ++i)
+    if (name == names[i])
+      return SkillID(i);
+  return SkillID();
+}
+]]></xsl:text>
+  </xsl:template>
+</xsl:stylesheet>
+<!-- vim: set expandtab tabstop=2 shiftwidth=2 : -->
